[ADD] Oh god why
• Add Cage Biome
• Add Jukebox

This is going to places, I dunno where, but places

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Assets\PostProcessing\Utilities\CustomMotionTexture\ExampleWheelController.cs" />
     <Compile Include="Assets\Scripts\Biome.cs" />
     <Compile Include="Assets\Scripts\Enums.cs" />
+    <Compile Include="Assets\Scripts\JukeBox.cs" />
     <Compile Include="Assets\Scripts\Map.cs" />
     <Compile Include="Assets\Scripts\UnityTerrainGenerator.cs" />
     <Compile Include="Assets\UnityChan\Scripts\CameraController.cs" />
